# Voltix_ProbeSoftware

./: .bumpversion.cfg  52-voltix.rules  README.md
.github/workflows/: build-firmware.yml  build-tool.yml  release-firmware.yml  release-tool.yml
firmware/: CMakeLists.txt
firmware/boards/: voltix_board.h  voltix_probe.h
firmware/include/: DAP_config.h  voltixprobe_config.h
firmware/src/: cdc_uart.c  main.c  probe_vendor.c  tusb_config.h  usb_descriptors.c
tool/: LICENSE.txt  pyproject.toml
tool/voltix_probe/: __init__.py  cli.py  probe.py  session.py  target.py
