[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "voltix-probe"
authors = [{name = "Voltix Team", email = "info@voltix-team.de"}]
license = {file = "LICENSE.txt"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "intelhex",
    "click",
    "pyserial",
    "progress",
    "pyocd",
]

[project.scripts]
voltix-probe = "voltix_probe.cli:cli"

[tool.black]
line-length = 120